--- a/trunk/docker-compose.yml
+++ b/trunk/docker-compose.yml
@@ -1,5 +1,5 @@
 kannel:
-  image: bulktrade/kannel:1.4.4
+  image: bulktrade/kannel:r5159
   ports:
     - 13013 # smsbox
     - 13000 # kannel admin
